Fix a couple of visual glitches: - buttons had an unwanted margin in Safari - code examples in help could overflow their containers

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -531,6 +531,7 @@ So for example:
   .type-monospace();
   .type-xs();
   .type-weak();
+  .type-wrap-words();
 }
 
 .box-action {
@@ -1374,6 +1375,7 @@ select.form-select {
   vertical-align: bottom;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   touch-action: manipulation;
+  margin: 0;
 }
 
 @media (max-width: @mobile-max-width) {
